kubernetes/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  strategy: {}
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - env:
            - name: STREAMLIT_BROWSER_GATHER_USAGE_STATS
              value: "False"

            - name: PAGE_SIZE
              value: "30"
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  name: operation-config
                  key: log-level
            - name: ENVIRONMENT
              valueFrom:
                configMapKeyRef:
                  name: operation-config
                  key: environment
            - name: ASSESSMENT_ID
              valueFrom:
                configMapKeyRef:
                  name: operation-config
                  key: assessment-id
            - name: DASHBOARD_USER
              valueFrom:
                secretKeyRef:
                  name: dashboard-creds
                  key: dashboard-user
            - name: DASHBOARD_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: dashboard-creds
                  key: dashboard-password

            - name: STREAMLIT_SERVER_PORT
              value: "8601"

            - name: NEMESIS_HTTP_SERVER
              valueFrom:
                configMapKeyRef:
                  name: operation-config
                  key: nemesis-http-server
            - name: PUBLIC_KIBANA_URL
              value: "$(NEMESIS_HTTP_SERVER)kibana/"
            - name: WEB_API_URL
              value: "$(NEMESIS_HTTP_SERVER)api/"
            - name: NLP_URL
              value: "http://nlp:9803/"

            - name: POSTGRES_SERVER
              value: postgres
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_DATABASE
              value: nemesis
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-creds
                  key: postgres-user
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-creds
                  key: postgres-password
            - name: POSTGRES_CONNECTION_URI
              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_SERVER):$(POSTGRES_PORT)/$(POSTGRES_DATABASE)"
            - name: DB_ITERATION_SIZE
              value: "1000"

            - name: ELASTICSEARCH_URL
              value: http://nemesis-es-internal-http:9200/
            - name: KIBANA_URL
              value: http://nemesis-kb-http:5601/
            - name: ELASTICSEARCH_USER
              valueFrom:
                secretKeyRef:
                  name: elasticsearch-users
                  key: username
            - name: ELASTICSEARCH_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: elasticsearch-users
                  key: password

          image: dashboard
          imagePullPolicy: IfNotPresent
          name: dashboard
          ports:
            - containerPort: 8601
              name: dashboard-http
          resources: {}

          readinessProbe:
            httpGet:
              path: /
              port: dashboard-http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
      restartPolicy: Always
status: {}
