kubernetes/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard
    component: dashboard
  name: dashboard
spec:
  type: NodePort
  ports:
    - name: "8601"
      port: 8601
      targetPort: 8601
      nodePort: 30073
  selector:
    app: dashboard
status:
  loadBalancer: {}
